Allow enabling PSPs (#4062)
* Make additional admission plugins configurable through the cluster resource

* Fix api client
