# api/cmd/kubermatic-api/swagger.json
@@ -4854,6 +4854,11 @@
         "oidc": {
           "$ref": "#/definitions/OIDCSettings"
         },
+        "usePodSecurityPolicyAdmissionPlugin": {
+          "description": "If active the PodSecurityPolicy admission plugin is configured at the apiserver",
+          "type": "boolean",
+          "x-go-name": "UsePodSecurityPolicyAdmissionPlugin"
+        },
         "version": {
           "$ref": "#/definitions/Semver"
         }
