# api/pkg/resources/cluster/cluster.go
@@ -13,12 +13,12 @@ import (
 // Spec builds ClusterSpec kubermatic Custom Resource from API Cluster
 func Spec(apiCluster apiv1.Cluster, cloudProviders map[string]provider.CloudProvider, dcs map[string]provider.DatacenterMeta) (*kubermaticv1.ClusterSpec, error) {
 	spec := &kubermaticv1.ClusterSpec{
-		HumanReadableName:          apiCluster.Name,
-		Cloud:                      apiCluster.Spec.Cloud,
-		MachineNetworks:            apiCluster.Spec.MachineNetworks,
-		OIDC:                       apiCluster.Spec.OIDC,
-		Version:                    apiCluster.Spec.Version,
-		AdditionalAdmissionPlugins: apiCluster.Spec.AdditionalAdmissionPlugins,
+		HumanReadableName:                   apiCluster.Name,
+		Cloud:                               apiCluster.Spec.Cloud,
+		MachineNetworks:                     apiCluster.Spec.MachineNetworks,
+		OIDC:                                apiCluster.Spec.OIDC,
+		Version:                             apiCluster.Spec.Version,
+		UsePodSecurityPolicyAdmissionPlugin: apiCluster.Spec.UsePodSecurityPolicyAdmissionPlugin,
 	}
 
 	if err := defaulting.DefaultCreateClusterSpec(spec, cloudProviders); err != nil {
